--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.32.2
 pandas==2.1.4
 numpy==1.26.2
 scikit-learn==1.3.2
-tensorflow==2.15.0  # Includes tensorflow.keras
+tensorflow.keras==2.15.0  # Includes tensorflow.keras
 xgboost==2.0.3
 matplotlib==3.8.2
 seaborn==0.13.0
